--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+    box-sizing: border-box;
+    font-family: Arial, sans-serif; 
+}
