lagt till hantering av hostname från api

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,6 @@
     <app-card *ngFor="let lang of langs" [lang]="lang"></app-card>
 </article>
 
+<p>{{hostname}}</p>
+
 <router-outlet></router-outlet>
